crates/credential/tests/probes/pattern2_service_reject.stderr
error[E0277]: the trait bound `BasicScheme: AcceptsBearer` is not satisfied
   --> tests/probes/pattern2_service_reject.rs:104:11
    |
104 |     _wire(&cred);
    |           ^^^^^ unsatisfied trait bound
    |
help: the trait `AcceptsBearer` is not implemented for `BasicScheme`
   --> tests/probes/pattern2_service_reject.rs:33:1
    |
 33 | struct BasicScheme {
    | ^^^^^^^^^^^^^^^^^^
help: this trait has no implementations, consider adding one
   --> tests/probes/pattern2_service_reject.rs:29:1
    |
 29 | pub trait AcceptsBearer: AuthScheme {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required for `WrongCredential` to implement `MyServiceBearer`
   --> tests/probes/pattern2_service_reject.rs:52:1
    |
 52 | #[nebula_credential_macros::capability(scheme_bound = AcceptsBearer, sealed = BearerSealed)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 53 | pub trait MyServiceBearer: MyService {}
    |           ^^^^^^^^^^^^^^^
note: required for `WrongCredential` to implement `MyServiceBearerPhantom`
   --> tests/probes/pattern2_service_reject.rs:52:1
    |
 52 | #[nebula_credential_macros::capability(scheme_bound = AcceptsBearer, sealed = BearerSealed)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 53 | pub trait MyServiceBearer: MyService {}
    |           ^^^^^^^^^^^^^^^ unsatisfied trait bound introduced here
    = note: required for the cast from `&WrongCredential` to `&dyn MyServiceBearerPhantom`
    = note: this error originates in the attribute macro `nebula_credential_macros::capability` (in Nightly builds, run with -Z macro-backtrace for more info)
